<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_bringup</name>
  <version>1.0.0</version>
  <description>Launch files for the complete autonomous perception pipeline.</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>perception_yolo</exec_depend>
  <exec_depend>perception_segmentation</exec_depend>
  <exec_depend>perception_costmap</exec_depend>
  <exec_depend>perception_fusion</exec_depend>
  <exec_depend>perception_navigation</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
