<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_yolo</name>
  <version>1.0.0</version>
  <description>YOLOv11 real-time object detection with TensorRT acceleration for ROS2.</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
